src/Website/styles/styles.css
body {
    font-family: Arial, sans-serif;
    padding: 20px 20px 0 20px;
    background-color: #f0f0f0;
    color: black;
}

body.dark-mode {
    background-color: #121212;
    color: white;
}
body.dark-mode .overlay-content {
    background-color: rgba(0, 0, 0, 0.8);
    color: #ffffff;
}
h1 {
    font-family: Arial, Helvetica, sans-serif;
    margin-top: 20px;
}

.logo {
    height: 160px;
    position: absolute;
    right: 20px;
    top: 20px;
}

.linegraph {
    box-sizing: border-box;
    margin: 20px;
    width: 100%;
    height: auto;
}

.charts-container {
    display: flex;
    gap: 20px;
    width: 90%;
}

.diskgraph {
    box-sizing: border-box;
    margin: 20px;
    width: 100%;
    height: auto;
}

.disk-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
    width: 100%;
}

.gpu-info {
    width: 60%;
    margin-top: 5vh;
    margin-right: -10%;
}

.computer-info {
    width: 60%;
    margin-top: 5vh;
    margin-right: -10%;
}

nav, ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    display: flex;
    
    align-items: center;
}

nav {
    background-color: #f2f2f2;
}

body.dark-mode nav {
    background-color: #121212;
}

ul {
    display: flex;
}

li {
    margin-right: 10px;
}

a {
    text-decoration: none;
    color: black;
    padding: 5px 10px;
    border-radius: 5px;
}
button{

    text-decoration: none;
    color: black;
    padding: 5px 10px;
    border-radius: 5px;
    background-color: #f5b865;
}

body.dark-mode a {
    color: white;
}
body.dark-mode button {
    color: white;
    background-color: #f5b865;
}
a.active {
    background-color: #f5b865;
    color: white;
}

a:hover:not(.active) {
    background-color: #f5b865;
    color: white;
}
button:hover {
    background-color: #f5b865;
    color: white;
}
/* dark mode Toggle Switch */
.switch {
    position: relative;
    display: inline-block;
    width: 80px;
    height: 34px;
    margin: 0 10px;
    margin-right: 30%;
    margin-left: 5%;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    transition: .4s;
    border-radius: 34px;
}

.slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    transition: .4s;
    border-radius: 50%;
}

input:checked + .slider {
    background-color: #6a6d70;
}

input:checked + .slider:before {
    transform: translateX(46px);
}

/* Label Text Styles */
.label-text {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    font-size: 14px;
    font-weight: bold;
}

.label-text.light {
    left: -50px;
}

.label-text.dark {
    right: -50px;
}

.cpu-charts-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.cpu-chart-item {
    flex: 1 1 calc(25% - 10px);
    margin: 5px;
    box-sizing: border-box;
    max-width: calc(25% - 10px);
}

.linegraph {
    margin-bottom: 20px;
}



.cpu-info {
    width: 60%;
    margin-top: 5vh;
}

.lighttoggle {
    position: relative;
    margin-right: 0vh;
}

.disk-info {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin-bottom: 20px;
    margin-top: 40px;
  
}

.disk-info h2 {
    margin-bottom: 10px;
}

.disk-info .disk-graphs {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    gap: 10px;
    justify-content: space-between;
}

.disk-info .disk-graphs > div {
    flex: 1 1 calc(33% - 10px); /* Ensure three charts per row */
    min-width: 200px;
}
.diskspacechart{
    position: relative;
    width: 50%;
}
.device-info{
    min-width: 300px !important;
}
.overlay {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    display: none;
    justify-content: center;
    align-items: center;
    z-index: 1000;
    background-color: rgba(0,0,0,0.4);
}

.overlay-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 80%;
    max-width: 600px;
}

#closeOverlay {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

#closeOverlay:hover,
#closeOverlay:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}
.chart-preview {
    position: absolute;
    border: 2px dashed #ccc;
    z-index: 9999;
    pointer-events: none;
}
.grid-stack-item-content {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    position: relative;
}
canvas {
    width: 100% !important;
    height: 100% !important;
}
.time{
    margin: 20px;
}

.charts-flex-container {
    display: flex;
    gap: 20px; 
    flex-direction: row; 
    justify-content: center; 
    align-items: flex-start; 
}
.close-chart {
    position: absolute;
    top: 5px;
    right: 5px;
    cursor: pointer;
    font-size: 20px;
    color: red;
}
@media screen and (max-width: 1000px) {
    .disk-info .disk-graphs {
        flex-direction: column;
    }

    .diskgraph,
    .linegraph {
        width: 100%;
        max-width: 100%;
        height: auto;
    }

    .charts-container {
        flex-direction: column;
    }
}
/* Hamburger menu styles */
.hamburger-menu {
    display: none;
    flex-direction: column;
    cursor: pointer;
    position: absolute;

}

.hamburger-menu .bar {
    width: 25px;
    height: 3px;
    background-color: black;
    margin: 4px 0;
    transition: 0.4s;
}

body.dark-mode .hamburger-menu .bar {
    background-color: white;
}
.app-icon{
    width: 20px;
    height: 20px;
}
table{
    width: 50%;
    margin-top: 30px;
    margin-left: 20%;
}
td{
    text-align: center;
}
.processname{
    text-align: left;
    width: 20%;
    
}
th {
    position: relative;
    cursor: pointer;
}

th.sort-asc::before, th.sort-desc::before {
    content: '';
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
    border: 5px solid transparent;
}

th.sort-asc::before {
    border-bottom-color: black;
    border-top: none;
}

th.sort-desc::before {
    border-top-color: black;
    border-bottom: none;
}
body.dark-mode th.sort-asc::before {
    border-bottom-color: rgb(255, 255, 255);
    border-top: none;
}

body.dark-mode th.sort-desc::before {
    border-top-color: rgb(255, 255, 255);
    border-bottom: none;
}
.managecomputers{
    width: 20px;
    height: 20px;
    position: absolute;
    top: 16%;
}
#computer-navbar {
    background-color: #f1f1f1;
    padding: 10px;
    left: 10%;
    position: relative;
}
body.dark-mode #computer-navbar {
background-color: #121212;
}
#computer-tabs {
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;

}

#computer-tabs li {
    padding: 10px;
    cursor: pointer;
    margin-right: 5px;
    border-radius: 5px;
    margin-left: 5px;
}
#computer-tabs li.active{
    background-color: #f5b865;
}

#add-computer-button {
    margin-left: -70px;
    cursor: pointer;
    background-color: #f5b865;
    color: white;
    border: none;
    padding: 10px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    border-radius: 4px;
}

.overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.7);
    display: none;
    align-items: center;
    justify-content: center;
}

.overlay-content {
    background-color: white;
    padding: 20px;
    border-radius: 10px;
    width: 300px;
    max-width: 80%;
}

.close-button {
    float: right;
    font-size: 20px;
    cursor: pointer;
}
.loading-overlay {
    position: fixed;
    top: 180px; /* exclude navbar */
    left: 0;
    width: 100%;
    height: calc(100% - 180px); /* exclude navbar */
    background: rgba(0, 0, 0, 0.7);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1000;
    flex-direction: column;
}

.spinner {
    width: 64px;
    height: 64px;
    border: 8px solid rgba(255, 255, 255, 0.3);
    border-radius: 50%;
    border-top-color: #ffffff;
    animation: spin 1s ease-in-out infinite;
}

@keyframes spin {
    to {
        transform: rotate(360deg);
    }
}

#loadingMessage {
    margin-top: 20px;
    color: white;
    font-size: 18px;
    text-align: center;
}



@media screen and (max-width: 1000px) {
    table{
        width: 100%;
        margin-left: 0%;
    }
    #addChartButton{
        width: 20%;
        padding: 20px;
        position: relative;
        font-size: x-large;
    }
    .disk-info .disk-graphs {
        flex-direction: column;
    }

    .diskgraph,
    .linegraph {
        width: 100%;
        max-width: 100%;
        height: auto;
    }

    .charts-container {
        flex-direction: column;
    }

    nav ul {
        flex-direction: column;
        align-items: center;
        display: none; /* Hide navigation links by default on mobile */
    }

    nav ul.show {
        display: flex; /* Show navigation links when the menu is opened */
        position: relative;

        
    }
    #nav-links{
        position: relative;
        margin-top: 60px;
        width: 100px;
        font-size: xx-large;
    }
    nav ul li {
        margin: 5px 0;
    }

    .switch {
        margin: 10px auto;
    }

    .hamburger-menu {
        display: flex; /* Show the hamburger menu on mobile */

    }
    .chart-container {
        width: 100%; 
    }
    
    .charts-flex-container {
        flex-direction: column; 
    }
}

